[gd_scene load_steps=4 format=3 uid="uid://51rbp5axx20h"]

[ext_resource type="Script" path="res://scenes/menus/pause_menu/pause_menu.gd" id="1_7hxaa"]
[ext_resource type="FontFile" uid="uid://byy8c6uknahne" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="1_jun7q"]
[ext_resource type="FontFile" uid="uid://b3ualvhd48xh1" path="res://assets/fonts/PixelOperator8.ttf" id="2_sk2p3"]

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7hxaa")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(400, 500)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Seperator" type="Control" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_jun7q")
theme_override_font_sizes/font_size = 32
text = "=PAUSE="
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 16
alignment = 1

[node name="ResumeBtn" type="Button" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_sk2p3")
theme_override_font_sizes/font_size = 16
text = "Resume"

[node name="OptionsBtn" type="Button" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_sk2p3")
theme_override_font_sizes/font_size = 16
text = "Options"

[node name="SaveBtn" type="Button" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_sk2p3")
theme_override_font_sizes/font_size = 16
text = "Save"

[node name="ExitBtn" type="Button" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_sk2p3")
theme_override_font_sizes/font_size = 16
text = "Exit"

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/VBoxContainer/ResumeBtn" to="." method="_on_resume_btn_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/VBoxContainer/OptionsBtn" to="." method="_on_options_btn_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/VBoxContainer/SaveBtn" to="." method="_on_save_btn_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/VBoxContainer/ExitBtn" to="." method="_on_exit_btn_pressed"]
